# standard_allergen_encoding

./: .env  .gitignore  README.md  app.py  main.py  menu_ocr.py  ocr_test.py  pyproject.toml  run.py  run_analyse_folder.py  run_filter_meals.py  run_ocr_folder.py
data/: main_allergies.csv  word_mapping.dump
data/allergens/: main_allergens.csv  secondary_allergens.csv
flaskr/: __init__.py
frontend/: group-script.js  index.html  individual-script.js  menu-script.js  script.js  styles.css
frontend/product/: group.html  individual.html  menu.html
outputs/: PHOTO-2026-01-31-18-56-12 (1).txt  PHOTO-2026-01-31-18-56-12.txt  filtered_results.json
src/: allergies_encoder.py  allergies_getter.py  db_manager.py  reset_database.py
tests/: test_allergies_encoder.py
