[project]
name = "standard-allergen-encoding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=4.0.0",
    "pillow>=12.1.0",
    "pytesseract>=0.3.13",
    "nltk>=3.9.2",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "pytest>=9.0.2",
    "psycopg2>=2.9.11",
    "sql>=2022.4.0",
    "wordfreq>=3.1.1",
    "python-dotenv>=1.0.0",
    "dotenv>=0.9.9",
]

[project.scripts]
run-server = "flaskr:create_app"
